<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkground"
    tools:context="com.eric_b.go4lunch.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_goforlunch"
            tools:src="@drawable/ic_goforlunch"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:contentDescription="@string/app_icone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/textColor"
            android:text="@string/title"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:id="@+id/facebook_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_radius_facebook"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/facebook_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/facebook_login"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/button_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/google_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_radius_google"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_google"
                    android:contentDescription="@string/google_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/google_login"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/button_text_size" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>