<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    tools:context=".controller.activity.RestaurantDisplay">

    <ImageView
        android:id="@+id/restaurantImageView"
        android:contentDescription="@string/photo_restaurant"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/no_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noImageTextView"
        android:text="@string/no_image"
        android:textSize="@dimen/no_image_text_size"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/restaurantImageView"
        android:layout_marginBottom="@dimen/no_image_text_margin"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantText"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/restaurantImageView"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_text_size"
            android:layout_marginStart="@dimen/name_text_margin"
            android:paddingTop="@dimen/padding_restaurant"
            android:text="@string/restaurant_name"
            />

            <ImageView
                android:id="@+id/starImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/restaurantName"
                android:layout_marginStart="@dimen/margin_restaurant"
                android:layout_toEndOf="@id/restaurantName"
                android:contentDescription="@string/like_star"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:src="@drawable/ic_star_line" />

            <ImageView
                android:id="@+id/starImage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/restaurantName"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@id/starImage1"
                android:contentDescription="@string/like_star"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:src="@drawable/ic_star_yellow"
                android:visibility="invisible"/>
        <ImageView
            android:id="@+id/starImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/restaurantName"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/starImage2"
            android:contentDescription="@string/like_star"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:visibility="invisible"
            android:src="@drawable/ic_star_yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantAdresse"
            android:layout_marginStart="@dimen/name_text_margin"
            android:layout_below="@id/restaurantName"
            android:text="@string/restaurant_description"
            android:textColor="@color/textColor"
            android:paddingBottom="@dimen/padding_restaurant"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_linearLayout"
        app:layout_constraintTop_toBottomOf="@id/restaurantText">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/call"
            android:drawableTop="@drawable/call_change_icon"
            android:text="@string/call"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorPrimary"
            android:background="@color/whiteBackground"
            android:paddingBottom="@dimen/padding_restaurant"
            android:paddingTop="@dimen/padding_restaurant"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/like"
            android:drawableTop="@drawable/ic_star"
            android:text="@string/like"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorPrimary"
            android:background="@color/whiteBackground"
            android:paddingBottom="@dimen/padding_restaurant"
            android:paddingTop="@dimen/padding_restaurant"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/web"
            android:drawableTop="@drawable/browser_change_icon"
            android:text="@string/website"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorPrimary"
            android:background="@color/whiteBackground"
            android:paddingBottom="@dimen/padding_restaurant"
            android:paddingTop="@dimen/padding_restaurant"
            android:layout_weight="1"/>
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/selectButton"
        android:id="@+id/checkButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/check_button_margin"
        android:background="@drawable/circle_button_background"
        android:padding="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:id="@+id/reserveRestaurant_RecyclerView"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linearLayout">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>