<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayoutRestarant01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutRestarant02"

        >

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restaurant_name"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/restaurantAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:text="@string/restaurant_description"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/openHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_hour"
            android:paddingStart="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:id="@+id/linearLayoutRestarant02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restaurantPhoto"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutRestarant01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textColor="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_workmate"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_workmate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/nbOfWorkmates"
                android:text="@string/nbOfWorkmates"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star03"
                android:visibility="invisible"
                android:src="@drawable/ic_star_yellow"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star02"
                android:visibility="invisible"
                android:src="@drawable/ic_star_yellow"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star01"
                android:src="@drawable/ic_star_line"/>
        </LinearLayout>
    </LinearLayout>

<ImageView
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:id="@+id/restaurantPhoto"
    android:src="@drawable/no_image"
    app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>